      TLS renegotiation. Bugfix on 0.2.0.x.
    - When counting the number of bytes written on a TLS connection, look at
      the BIO actually used for writing to the network, not at the BIO used
      (sometimes) to buffer data for the network.  Looking at different BIOs
      could result in write counts on the order of ULONG_MAX.  Fix for bug
      614.  Bugfix on 0.1.2.x.


Changes in version 0.2.0.21-rc - 2008-03-02
  o Major bugfixes:
    - The control port should declare that it requires password auth
      when HashedControlSessionPassword is set too. Patch from Matt Edman;
      bugfix on 0.2.0.20-rc. Fixes bug 615.
    - Downgrade assert in connection_buckets_decrement() to a log message.
      This may help us solve bug 614, and in any case will make its
      symptoms less severe. Bugfix on 0.2.0.20-rc. Reported by fredzupy.
    - We were sometimes miscounting the number of bytes read from the
      network, causing our rate limiting to not be followed exactly.
      Bugfix on 0.2.0.16-alpha. Reported by lodger.

  o Minor bugfixes:
    - Fix compilation with OpenSSL 0.9.8 and 0.9.8a.  All other supported
      OpenSSL versions should have been working fine.  Diagnosis and patch
      from lodger, Karsten Loesing and Sebastian Hahn.  Fixes bug 616.
      Bugfix on 0.2.0.20-rc.


Changes in version 0.2.0.20-rc - 2008-02-24
  Tor 0.2.0.20-rc is the first release candidate for the 0.2.0 series. It
  makes more progress towards normalizing Tor's TLS handshake, makes
  hidden services work better again, helps relays bootstrap if they don't
  know their IP address, adds optional support for linking in openbsd's
  allocator or tcmalloc, allows really fast relays to scale past 15000
  sockets, and fixes a bunch of minor bugs reported by Veracode.

  o Major features:
    - Enable the revised TLS handshake based on the one designed by
      Steven Murdoch in proposal 124, as revised in proposal 130. It